Changelog
=========

7.5.dev0 - (unreleased)
-----------------------

7.4 - (2019-03-04)
------------------
* Fix: update allowed types for Files Library item in order to make old content
  cut / paste possible.
  [GhitaB #96683]
* Improve: customize page title in set notifications view and improve spacing.
  [GhitaB #101742]
* Feature: text_update tool - helper for updating country names etc.
  [GhitaB #102884]

7.3 - (2019-02-27)
------------------
* Fix: bug on selecting accounts to be notified (disclaimer_permission == None
  means False, too).
  [GhitaB #101742]

7.2 - (2019-02-26)
------------------
* Improve: shorter subject in email notifications.
* Improve: use a form for setting user preferences related to notifications.
  [GhitaB #101742]

7.1 - (2019-02-25)
------------------
* Feature: homepage / coming events - to include eea.meetings objects
  [GhitaB #103043]

7.0 - (2019-02-21)
------------------
* Improve: Add min and max values for From and To fields in meeting edit form.
* Improve: update text for account deletion option in meeting register form.
* Fix: remove comma after Hello in meeting register.
  [GhitaB #97529]

6.9 - (2019-02-18)
------------------
* Improve: add more space under the table in files library item view.
* Improve: add Show all option to disable search filters (admin and view).
* Improve: space between filters and table.
* Fix: floating problem when filters are on two lines.
  [GhitaB #96683]

6.8 - (2019-02-13)
------------------
* Improve: Use creation date for files at rdf export + upgrade step
  to trigger pingcr mass ping for objects that are files
  [iulianpetchesi #99788]
* Improve: Disable sorting and searching for column Document access in files
  library view and admin panel.
* Improve: Add link and more info on search items in files library view.
  [GhitaB #96683]
* Improve: 'Registration declined' instead of rejected in meeting view.
* Improve: rename column Time of application in Subscribers view table.