@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>3.6.1</version>
+  <version>3.7</version>
   <dependencies>
     <dependency>profile-collective.z3cform.datagridfield:default</dependency>
   </dependencies>
