@@ -3,6 +3,10 @@ Changelog
 
 7.5.dev0 - (unreleased)
 -----------------------
+* Improve: Added old search page override to redirect to new search
+* Improve: Use creation date for objects tagged by IATBlob interface at rdf
+  export + upgrade step to trigger pingcr mass ping for objects
+  [iulianpetchesi #99788]
 
 7.4 - (2019-03-04)
 ------------------
@@ -600,4 +604,3 @@ Changelog
 1.0  - (initial release)
 ------------------------
 * Initial release
-
